# django-ajax-selects

./: .gitignore  .jshintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  MANIFEST.in  Makefile  OrderedManyToMany.md  Pipfile  README.md  README.rst  README.txt  Release-notes.md  index.html  params.json  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test_settings.py  tox.ini
.github/workflows/: publish.yml  tests.yml
ajax_select/: LICENSE.txt  __init__.py  admin.py  apps.py  decorators.py  docs.txt  fields.py  helpers.py  iconic.css  lookup_channel.py  model_autocomplete_field.py  models.py  multi_autocomplete_field.py  registry.py  setup.py  sites.py  urls.py  views.py
ajax_select/js/: ajax_select.js
ajax_select/static/ajax_select/: iconic.css
ajax_select/static/ajax_select/css/: ajax_select.css
ajax_select/static/ajax_select/js/: ajax_select.js  bootstrap.js
ajax_select/static/css/: ajax_select.css
ajax_select/static/js/: ajax_select.js
ajax_select/templates/: autocomplete.html  autocompleteselect.html  autocompleteselectmultiple.html
ajax_select/templates/ajax_select/: ajax_select.css  ajax_select.js  autocomplete.html  autocompleteselect.html  autocompleteselectmultiple.html  bootstrap.html
docs/: Makefile  conf.py  index.rst
docs/source/: Admin-add-popup.rst  Admin.rst  Contributing.rst  Custom-Templates.rst  Example-app.rst  Forms.rst  Install.rst  LookupChannel.rst  Media-assets.rst  Ordered-ManyToMany.rst  Outside-of-Admin.rst  Release-notes.rst  Upgrading.rst  ajax_select.rst  conf.py  index.rst  jQuery-events.rst  jQuery-plugin-options.rst  modules.rst
example/: Makefile  README  README.md  admin.py  ajax_select  ajax_selects_example  forms.py  install.sh  lookups.py  manage.py  models.py  settings.py  urls.py  views.py
example/example/: admin.py  forms.py  lookups.py  models.py  settings.py  urls.py  views.py
example/example/migrations/: 0001_initial.py  0002_alter_author_id_alter_book_id_alter_group_id_and_more.py
example/templates/: search_form.html
example/templates/example/: search_form.html
tests/: admin.py  lookups.py  lookups2.py  models.py  other_lookups.py  settings.py  test_fields.py  test_integration.py  test_lookups.py  test_models.py  test_registry.py  test_views.py  tests.py  urls.py
