[tool.poetry]
name = "django-ajax-selects"
version = "2.2.0"
description = "Edit ForeignKey, ManyToManyField and CharField in Django Admin using jQuery UI AutoComplete."
authors = ["Chris Sattinger <crucialfelix@gmail.com>"]
repository = "https://github.com/crucialfelix/django-ajax-selects"
documentation = "https://django-ajax-selects.readthedocs.io/en/latest/"
license = "MIT, GPL"
readme = "README.md"
packages = [{include = "ajax_select"}]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: User Interfaces",
  "Framework :: Django",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
flake8 = "^6.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
